# ypd-langchain-agent-hands-on

./: .gitignore  CLAUDE.md  README.md
doc/: 1.3.aurora_postgres_bedrock_setup.md  4.6.agent-test.md
doc/extras/: bedrock_cli_commands.md  今回のアプリ概要.md
doc/knowledge-base-data-source/: vinyl_record.xlsx
scripts/: setup_bedrock.sh
terraform/environment/dev-ypd/default/: .terraform.lock.hcl  02_aurora.tf  02_iam.tf  02_opensearchserverless.tf  02_s3.tf  02_sg.tf  02_vpc.tf  03_bedrock_knowledgebase.tf  03_bedrock_knowledgebase.tf.bk  backend_dev-ypd.tf  local.tf
ypd-langchain/: .env.example
ypd-langchain/app/: agent_helper.py  asana_mcp.py  knowledge_base.py  main.py  pyproject.toml  requirements.txt  test_kb.py
ypd-langchain/docker/: Dockerfile  docker-compose.yml
