[project]
name = "ypd-langchain-app"
version = "0.1.0"
description = "YPD LangChain Application"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "langchain==0.3.25",
    "langchain-aws==0.2.23",
    "boto3==1.38.23",
    "pydantic==2.11.5",
    "langchain-mcp-adapters==0.1.2",
    "langgraph==0.2.62",
]